--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,11 @@
 
 body {
   position: relative;
-  background-color: rgb(104, 104, 104);
+  background-color: #153e90;
 }
 h1 {
   text-align: center;
+  font-family: Georgia, "Times New Roman", Times, serif;
   margin-top: 20px;
   color: aliceblue;
 }
